--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
 
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <title>Hello Lume!</title>
+</head>
+
+<body>
+  <lume-scene>
+    <lume-node id="node" position="50 50" size="100 100"></lume-node>
+  </lume-scene>
+</body>
+
 </html>
